syntax="proto3";

package auth;

option go_package = "./pkg/auth/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RegisterAdmin(RegisterAdminRequest) returns (RegisterAdminResponse) {}
  rpc LoginAdmin(LoginAdminRequest) returns (LoginAdminResponse) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Register Admin
message RegisterAdminRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterAdminResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Login Admin

message LoginAdminRequest {
  string username = 1;
  string password = 2;
}

message LoginAdminResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// ValidateToken

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int64 status = 1;
  string error = 2;
  string user_id = 3;
}